--- a/app/src/main/res/layout/activity_signup_one.xml
+++ b/app/src/main/res/layout/activity_signup_one.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:layout_below="@+id/ll_name"
-        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
         android:src="@drawable/walkthroughs" />
 
     <RelativeLayout
@@ -76,10 +76,10 @@
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_12"
-            android:paddingLeft="@dimen/dim_30"
-            android:paddingRight="@dimen/dim_30"
-            android:paddingTop="@dimen/dim_12"
+            android:paddingBottom="@dimen/dim_13"
+            android:paddingLeft="@dimen/dim_40"
+            android:paddingRight="@dimen/dim_40"
+            android:paddingTop="@dimen/dim_13"
             android:text="NEXT"
             android:textColor="@color/blue_text"
             android:textSize="@dimen/dim_14"
