--- a/app/src/main/res/drawable/rounded_top.xml
+++ b/app/src/main/res/drawable/rounded_top.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
+    <!--<stroke-->
+        <!--android:width="1dp"-->
+        <!--android:color="@color/colorPrimaryDark" />-->
     <!--<corners-->
         <!--android:bottomLeftRadius="0.0dip"-->
         <!--android:bottomRightRadius="0.0dip"-->
