--- a/app/src/main/res/drawable/rounded_tv_bg.xml
+++ b/app/src/main/res/drawable/rounded_tv_bg.xml
@@ -4,5 +4,6 @@
     <solid android:color="#CFF3E7" />
 
     <corners
-        android:topRightRadius="@dimen/dim_15"/>
+        android:topRightRadius="@dimen/dim_15"
+        android:bottomLeftRadius="@dimen/dim_15"/>
 </shape>
