--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -77,6 +77,6 @@
         android:padding="@dimen/dim_5"
         android:text="Already have an account ? "
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_16" />
+        android:textSize="16sp" />
     <!--    </LinearLayout>-->
 </LinearLayout>
