--- a/app/src/main/res/layout/activity_signin_one.xml
+++ b/app/src/main/res/layout/activity_signin_one.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/main_gradient_bg"
     tools:context="com.localfriend.SigninActivityOne">
 
@@ -19,13 +19,13 @@
         android:padding="@dimen/dim_10">
 
         <com.localfriend.fonts.CustomFontTextView
-            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome back, Enter your\n Mobile number ?"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
         <EditText
             android:id="@+id/edt_cust_mobile"
@@ -44,9 +44,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
         android:layout_below="@+id/ll_name"
-        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
         android:src="@drawable/walkthroughs" />
 
     <RelativeLayout
@@ -57,30 +56,30 @@
         android:padding="@dimen/dim_10">
 
         <com.localfriend.fonts.CustomFontTextView
-            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="Step 1 of 2"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
         <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_btn_next"
-            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_12"
-            android:paddingLeft="@dimen/dim_30"
-            android:paddingRight="@dimen/dim_30"
-            android:paddingTop="@dimen/dim_12"
+            android:paddingBottom="@dimen/dim_13"
+            android:paddingLeft="@dimen/dim_40"
+            android:paddingRight="@dimen/dim_40"
+            android:paddingTop="@dimen/dim_13"
             android:text="NEXT"
             android:textColor="@color/blue_text"
-            android:textSize="@dimen/dim_14" />
+            android:textSize="@dimen/dim_14"
+            app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
