--- a/app/src/main/res/layout/activity_signin_two.xml
+++ b/app/src/main/res/layout/activity_signin_two.xml
@@ -42,12 +42,11 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_name"
+        android:adjustViewBounds="true"
         android:layout_marginTop="@dimen/dim_60"
-        android:background="@null"
-        android:scaleType="centerCrop"
         android:src="@drawable/walkthroughss" />
 
     <RelativeLayout
@@ -75,10 +74,10 @@
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_12"
-            android:paddingLeft="@dimen/dim_30"
-            android:paddingRight="@dimen/dim_30"
-            android:paddingTop="@dimen/dim_12"
+            android:paddingBottom="@dimen/dim_13"
+            android:paddingLeft="@dimen/dim_40"
+            android:paddingRight="@dimen/dim_40"
+            android:paddingTop="@dimen/dim_13"
             android:text="SIGN IN"
             android:textColor="@color/blue_text"
             android:textSize="@dimen/dim_14"
