--- a/app/src/main/res/layout/activity_signup_three.xml
+++ b/app/src/main/res/layout/activity_signup_three.xml
@@ -7,8 +7,7 @@
     android:background="@drawable/main_gradient_bg"
     tools:context="com.localfriend.SignupActivityThree">
 
-    <include
-        layout="@layout/toolbar_common" />
+    <include layout="@layout/toolbar_common" />
 
     <RelativeLayout
         android:id="@+id/lnr_verification"
@@ -29,36 +28,52 @@
             android:textStyle="bold"
             app:textStyle="@integer/roboto_medium" />
 
-
-        <EditText
-            android:id="@+id/edt_code"
+        <com.alimuzaffar.lib.pin.PinEntryEditText
+            android:id="@+id/txt_pin_entry"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_label"
-            android:layout_marginTop="@dimen/dim_10"
-            android:gravity="center"
-            android:letterSpacing="2"
-            android:padding="15dp"
-            android:backgroundTint="@color/white"
+            android:layout_marginTop="10dp"
+            android:cursorVisible="false"
+            android:digits="1234567890"
             android:inputType="number"
-            android:maxLines="1"
+            android:maxLength="6"
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_16"
-            />
+            android:textIsSelectable="false"
+            android:textSize="20sp"
+            app:pinBackgroundIsSquare="false"
+            app:pinLineColors="@color/white"
+            app:pinLineStroke="2dp"
+            app:pinLineStrokeSelected="2dp"
+            app:pinTextBottomPadding="10dp" />
+        <!--<EditText-->
+        <!--android:id="@+id/edt_code"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/tv_label"-->
+        <!--android:layout_marginTop="@dimen/dim_10"-->
+        <!--android:backgroundTint="@color/white"-->
+        <!--android:gravity="center"-->
+        <!--android:inputType="number"-->
+        <!--android:letterSpacing="2"-->
+        <!--android:maxLines="1"-->
+        <!--android:padding="15dp"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="@dimen/dim_16" />-->
 
         <!--<ProgressBar-->
-            <!--android:id="@+id/progress_bar"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/tv_label"-->
-            <!--android:layout_centerInParent="true" />-->
+        <!--android:id="@+id/progress_bar"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/tv_label"-->
+        <!--android:layout_centerInParent="true" />-->
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rel_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lnr_verification"
-        android:id="@+id/rel_timer"
         android:layout_centerHorizontal="true">
 
         <TextView
@@ -81,12 +96,12 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rel_timer"
         android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"
         android:background="@null"
-        android:scaleType="centerCrop"
         android:src="@drawable/basket_with_pt_sans" />
 
     <RelativeLayout
@@ -114,10 +129,10 @@
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_12"
-            android:paddingLeft="@dimen/dim_30"
-            android:paddingRight="@dimen/dim_30"
-            android:paddingTop="@dimen/dim_12"
+            android:paddingBottom="@dimen/dim_13"
+            android:paddingLeft="@dimen/dim_40"
+            android:paddingRight="@dimen/dim_40"
+            android:paddingTop="@dimen/dim_13"
             android:text="NEXT"
             android:textColor="@color/blue_text"
             android:textSize="@dimen/dim_14"
