--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -47,9 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_item_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:padding="5dp"
-        android:drawableLeft="@drawable/ic_cart_new"
+        android:layout_marginTop="18dp"
+        android:padding="6dp"
+        android:drawableLeft="@drawable/cart_green"
         android:drawablePadding="@dimen/dim_7"
         android:gravity="center_vertical"
         android:text="Add To Cart"
