--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/bg_cart"
+    android:id="@+id/rl_main"
     android:orientation="vertical"
     tools:context="com.localfriend.fragments.CartFragment">
 
@@ -12,10 +13,11 @@
         android:id="@+id/recy_cart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:layout_above="@+id/tv_checkout"
         android:layout_marginTop="?actionBarSize"
-        android:paddingLeft="@dimen/dim_15"
-        android:paddingRight="@dimen/dim_15" />
+        android:paddingLeft="@dimen/dim_5"
+        android:paddingRight="@dimen/dim_5" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_checkout"
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
+        android:visibility="gone"
         android:src="@drawable/empty_cart" />
 
     <com.localfriend.fonts.CustomFontTextView
@@ -49,6 +52,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/dim_5"
         android:layout_marginLeft="@dimen/dim_20"
+        android:visibility="gone"
         android:layout_marginRight="@dimen/dim_20"
         android:background="@drawable/curvy_gradient_bg"
         android:gravity="center"
