--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,23 +10,21 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#BEE9FC"
-        android:layout_weight="1.5">
+        android:layout_weight="1.6"
+        android:background="#BEE9FC">
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/gif_loader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/loader"
             android:background="@drawable/loader"
-            />
+            android:src="@drawable/loader" />
 
         <ss.com.bannerslider.views.BannerSlider
             android:id="@+id/banner_slider1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.5"
             app:interval="3000" />
     </RelativeLayout>
     <!--<com.daimajia.slider.library.SliderLayout-->
@@ -39,8 +37,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/home_bg">
+        android:layout_weight="1">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/home_bg" />
 
         <LinearLayout
             android:layout_width="match_parent"
