--- a/app/src/main/res/layout/fragment_tiffin.xml
+++ b/app/src/main/res/layout/fragment_tiffin.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_marginTop="?actionBarSize"
     android:layout_height="match_parent"
+    android:id="@+id/ll_main"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -24,7 +25,7 @@
             android:layout_gravity="center_vertical"
             android:text="BreakFast"
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_30"
+            android:textSize="22sp"
             app:textStyle="@integer/roboto_medium" />
 
         <ImageView
@@ -54,7 +55,7 @@
             android:layout_gravity="center_vertical"
             android:text="Lunch"
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_30"
+            android:textSize="22sp"
             app:textStyle="@integer/roboto_medium" />
 
         <ImageView
@@ -84,7 +85,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="Dinner"
                 android:textColor="@color/white"
-                android:textSize="@dimen/dim_30"
+                android:textSize="22sp"
                 app:textStyle="@integer/roboto_medium" />
 
             <ImageView
@@ -113,7 +114,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="Snacks"
                 android:textColor="@color/white"
-                android:textSize="@dimen/dim_30"
+                android:textSize="22sp"
                 app:textStyle="@integer/roboto_medium" />
 
             <ImageView
