--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
+        <item name="homeAsUpIndicator">@drawable/back_button</item>
         <!--<item name="android:navigationBarColor">#1D6D9E</item>-->
         <item name="android:windowFullscreen">false</item>
         <item name="windowActionBar">false</item>
