--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:text="Veggie Burger"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     app:textStyle="@integer/roboto_medium" />
 
@@ -67,8 +67,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_item_name"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="5dp"
                     android:text="Rs 100"
+                    android:textColor="@color/gray_tab"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_medium" />
 
@@ -77,8 +78,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_unit"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="5dp"
                     android:text="Rs 100"
+                    android:textColor="@color/black"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_medium" />
 
@@ -86,12 +88,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/tv_item_cost"
-                    android:layout_marginTop="@dimen/dim_10">
+                    android:layout_marginTop="5dp">
 
                     <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/tv_plus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:background="@drawable/circular_bg"
@@ -105,25 +107,26 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dim_10"
+                        android:layout_marginRight="@dimen/dim_15"
+                        android:layout_marginLeft="@dimen/dim_15"
                         android:layout_toLeftOf="@+id/tv_plus"
                         android:text="1"
-                        android:textColor="@color/blue_text"
+                        android:textColor="@color/gray_text"
                         android:textSize="@dimen/dim_18"
                         app:textStyle="@integer/roboto_medium" />
 
                     <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/tv_minus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dim_10"
-                        android:layout_toLeftOf="@+id/tv_counter"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:background="@drawable/circular_bg"
-                        android:gravity="center"
+                        android:gravity="center_horizontal"
                         android:text=" - "
                         android:textSize="@dimen/dim_18"
-                        app:textStyle="@integer/roboto_medium" />
+                        app:textStyle="@integer/roboto_medium"
+                        android:layout_alignParentTop="true"
+                        android:layout_toLeftOf="@+id/tv_counter"
+                        android:layout_toStartOf="@+id/tv_counter" />
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
