--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,6 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:fitsSystemWindows="true"
     android:background="@drawable/main_gradient_bg"
     app:theme="@style/ToolbarStyle">
 
@@ -14,7 +15,7 @@
         android:layout_gravity="center"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:textStyle="@integer/roboto_medium" />
 </android.support.v7.widget.Toolbar>
