--- a/app/src/main/res/drawable/store_bg.xml
+++ b/app/src/main/res/drawable/store_bg.xml
@@ -4,6 +4,6 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="#9046C3"></stroke>
+        android:color="#3CBEA3"></stroke>
     <corners android:radius="@dimen/dim_25" />
 </shape>
