--- a/app/src/main/res/layout/activity_break_fast.xml
+++ b/app/src/main/res/layout/activity_break_fast.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,6 +12,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_breakfast"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ll_bottom"
+        android:layout_below="@+id/toolbar_common" />
 
-</LinearLayout>
+    <include layout="@layout/bottom"></include>
+</RelativeLayout>
