--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -44,7 +44,7 @@
             android:orientation="horizontal"
             android:padding="@dimen/dim_10">
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:id="@+id/tv_one_kg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/dim_16" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:id="@+id/tv_two_kg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                 android:textSize="@dimen/dim_16"
                 android:visibility="gone" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:id="@+id/tv_three_kg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
                 android:textSize="@dimen/dim_16"
                 android:visibility="gone" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:id="@+id/tv_four_kg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
                 android:textSize="@dimen/dim_16"
                 android:visibility="gone" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:id="@+id/tv_five_kg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -128,7 +128,7 @@
                 android:visibility="gone" />
         </LinearLayout>
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
             android:id="@+id/tv_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/dim_18" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
