--- a/app/src/main/res/layout/activity_signup_three.xml
+++ b/app/src/main/res/layout/activity_signup_three.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_gradient_bg"
+    android:fitsSystemWindows="true"
     tools:context="com.localfriend.SignupActivityThree">
 
     <include layout="@layout/toolbar_common" />
@@ -76,7 +77,7 @@
         android:layout_below="@+id/lnr_verification"
         android:layout_centerHorizontal="true">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
             android:id="@+id/timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,7 +85,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/dim_15" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
             android:id="@+id/txt_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
