--- a/app/src/main/res/layout/activity_signup_two.xml
+++ b/app/src/main/res/layout/activity_signup_two.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_gradient_bg"
+    android:fitsSystemWindows="true"
     tools:context="com.localfriend.SignupActivityTwo">
 
     <include layout="@layout/toolbar_common" />
