--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/card_new">
 
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="20dp"
         android:text="Rs 20"
         android:paddingLeft="6dp"
         android:paddingTop="2dp"
@@ -22,9 +22,9 @@
     <ImageView
         android:id="@+id/img_item"
         android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
         android:background="@null"
         android:src="@drawable/bakery" />
 
@@ -35,10 +35,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_item"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="28dp"
         android:text="Veggie Burger"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="15sp" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add_cart"
@@ -47,9 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_item_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:padding="6dp"
-        android:drawableLeft="@drawable/cart_green"
+        android:layout_marginTop="20dp"
+        android:padding="5dp"
+        android:drawableLeft="@drawable/cart_new"
         android:drawablePadding="@dimen/dim_7"
         android:gravity="center_vertical"
         android:text="Add To Cart"
