--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_cart"
-    android:id="@+id/rl_main"
     android:orientation="vertical"
     tools:context="com.localfriend.fragments.CartFragment">
 
@@ -13,11 +13,92 @@
         android:id="@+id/recy_cart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:layout_above="@+id/tv_checkout"
+        android:layout_above="@+id/card_price"
         android:layout_marginTop="?actionBarSize"
         android:paddingLeft="@dimen/dim_5"
-        android:paddingRight="@dimen/dim_5" />
+        android:paddingRight="@dimen/dim_5"
+        android:visibility="gone" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_price"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_above="@+id/tv_checkout"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="@dimen/dim_20"
+        android:layout_marginRight="@dimen/dim_20"
+        android:visibility="gone"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:padding="2dp"
+                    android:text="Sub Total"
+                    android:textSize="16sp"
+                    app:textStyle="@integer/roboto_medium" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_subtotal_title"
+                    android:layout_centerHorizontal="true"
+                    android:text="Sub Total"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:textStyle="@integer/roboto_medium" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_tab"></View>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:padding="2dp"
+                    android:text="Total"
+                    android:textSize="16sp"
+                    app:textStyle="@integer/roboto_medium" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_total_title"
+                    android:layout_centerHorizontal="true"
+                    android:text="Sub Total"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:textStyle="@integer/roboto_medium" />
+
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_checkout"
@@ -27,9 +108,9 @@
         android:layout_marginBottom="@dimen/dim_5"
         android:layout_marginLeft="@dimen/dim_20"
         android:layout_marginRight="@dimen/dim_20"
-        android:background="@drawable/curvy_gradient_bg"
+        android:background="@drawable/rounded_gredient"
         android:gravity="center"
-        android:padding="@dimen/dim_8"
+        android:padding="@dimen/dim_9"
         android:text="Checkout"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_18"
@@ -42,8 +123,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:visibility="gone"
-        android:src="@drawable/empty_cart" />
+        android:src="@drawable/empty_cart"
+        android:visibility="gone" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_start_shopping"
@@ -52,14 +133,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/dim_5"
         android:layout_marginLeft="@dimen/dim_20"
-        android:visibility="gone"
         android:layout_marginRight="@dimen/dim_20"
-        android:background="@drawable/curvy_gradient_bg"
+        android:background="@drawable/rounded_gredient"
         android:gravity="center"
         android:padding="@dimen/dim_8"
         android:text="Start Shopping"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_18"
+        android:visibility="gone"
         app:textStyle="@integer/roboto_medium" />
 
 </RelativeLayout>
