--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -23,7 +23,7 @@
                 android:background="@null"
                 android:src="@drawable/payment_new" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
