--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -21,7 +21,8 @@
         android:orientation="vertical"
         android:padding="@dimen/dim_10">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DELIVERY ADDRESS"
@@ -39,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dim_30">
 
-                <TextView
+                <com.localfriend.fonts.CustomFontTextView
+                    app:textStyle="@integer/roboto_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -55,7 +57,8 @@
 
         </android.support.v7.widget.CardView>
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim_15"
@@ -79,14 +82,16 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dim_10">
 
-                <TextView
+                <com.localfriend.fonts.CustomFontTextView
+                    app:textStyle="@integer/roboto_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total Price :- Rs 100"
                     android:textColor="@color/black"
                     android:textSize="@dimen/dim_18"
                     android:textStyle="bold" />
-                <TextView
+                <com.localfriend.fonts.CustomFontTextView
+                    app:textStyle="@integer/roboto_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -104,7 +109,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/dim_15"
@@ -143,14 +149,14 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dim_10">
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Total Price :- Rs 100"
                         android:textColor="@color/black"
                         android:textSize="@dimen/dim_18"
                         android:textStyle="bold" />
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -168,7 +174,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="@dimen/dim_15"
@@ -210,7 +216,7 @@
             android:paddingTop="@dimen/dim_15"
             android:paddingBottom="@dimen/dim_15"
             android:orientation="vertical">
-<TextView
+<com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -218,7 +224,7 @@
     android:textSize="@dimen/dim_18"
     android:textColor="@color/blue_text"
     />
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -239,7 +245,7 @@
             android:paddingTop="@dimen/dim_15"
             android:paddingBottom="@dimen/dim_15"
             android:orientation="vertical">
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -247,7 +253,7 @@
                 android:textSize="@dimen/dim_18"
                 android:textColor="@color/blue_text"
                 />
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -269,7 +275,7 @@
             android:paddingBottom="@dimen/dim_15"
             android:orientation="vertical">
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
