--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="@dimen/dim_40"
     android:layout_marginRight="@dimen/dim_40"
     android:orientation="vertical">
 
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView
+        app:textStyle="@integer/roboto_medium"
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
