--- a/app/src/main/res/layout/vegetable_items.xml
+++ b/app/src/main/res/layout/vegetable_items.xml
@@ -10,14 +10,25 @@
         android:layout_height="match_parent">
 
         <com.localfriend.fonts.CustomFontTextView
-            android:id="@+id/tv_cost"
+            android:id="@+id/tv_cost_old"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:padding="@dimen/dim_5"
-            android:text="Rs.20"
+            android:textColor="@color/gray_text"
             android:textSize="14sp"
+            app:textStyle="@integer/roboto_medium" />
+
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/tv_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/tv_cost_old"
+            android:layout_marginTop="10dp"
+            android:padding="@dimen/dim_3"
+            android:textColor="@color/gray_text"
+            android:textSize="16sp"
             app:textStyle="@integer/roboto_medium" />
 
         <ImageView
@@ -31,22 +42,37 @@
 
         <ImageView
             android:id="@+id/img_veg"
-            android:layout_width="95dp"
-            android:layout_height="95dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:background="@null"
             android:src="@drawable/apple" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_veg_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_veg"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Shimla Apple\n 1 KG"
-            android:textSize="16sp" />
+            android:text="Shimla Apple"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:textStyle="@integer/roboto_medium" />
+
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/txt_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_veg_name"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="Shimla Apple"
+            android:textColor="@color/gray_tab"
+            android:textSize="15sp"
+            app:textStyle="@integer/roboto_medium" />
 
         <!--<View-->
         <!--android:layout_width="match_parent"-->
@@ -54,19 +80,20 @@
         <!--android:layout_above="@+id/tv_add_cart"-->
         <!--android:background="@color/colorPrimaryDark" />-->
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_add_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:drawableLeft="@drawable/cart_green"
+            android:layout_marginBottom="5dp"
+            android:drawableLeft="@drawable/cart_new"
             android:drawablePadding="8dp"
-            android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:padding="@dimen/dim_10"
+            android:padding="8dp"
             android:text="Add to cart"
             android:textColor="#49CA99"
-            android:textSize="15sp" />
+            android:textSize="14sp"
+            app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
